<resources>
    <!-- COMMON -->
    <string name="app_name">Homedecor</string>
    <string name="content_description">ImageView</string>

    <!-- LOGIN/REGISTER -->
    <string name="noAccount_goToRegister">Δεν έχετε λογαριασμό; Εγγραφή εδώ</string>
    <string name="username">Όνομα Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="last_name">Επώνυμο</string>
    <string name="first_name">Όνομα</string>
    <string name="email">Email</string>
    <string name="login">Εισοδος</string>
    <string name="register">Εγγραφη</string>
    <string name="address">Διεύθυνση</string>
    <string name="address_number">Νούμερο</string>
    <string name="postal_code">Τ.Κ.</string>
    <string name="city">Πόλη</string>
    <string name="state">Νομός</string>
    <string name="country">Χώρα</string>
    <string name="phone">Σταθερό</string>
    <string name="mobilePhone">Κινητό</string>
    <string name="remember_me">Αποθήκευση στοιχείων</string>

    <!-- USER PROFILE -->
    <string name="profile">Προφίλ</string>
    <string name="contact">Επικοινωνία</string>
    <string name="info">Γενικές πληροφορίες</string>
    <string name="save">Αποθηκευση</string>

    <!-- MENU -->
    <string name="settings">Ρυθμίσεις</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="about_us">Λίγα λόγια..</string>
    <string name="how_to">Οδηγίες</string>

    <!-- CART -->
    <string name="buy_now">Αγορα</string>
    <string name="add_to_cart">Προσθηκη στο καλαθι</string>
    <string name="delete_cart">Άδειασμα καλαθιού</string>
    <string name="products">Προϊόντα</string>
    <string name="productDetails">Προϊόν</string>
    <string name="cart">Καλάθι</string>
    <string name="title_activity_cart">Καλάθι</string>
    <string name="vat">ΦΠΑ :</string>
    <string name="price_total">Σύνολο:</string>
    <string name="cart_deleted">Το καλάθι άδειασε!</string>
    <string name="cart_added_product">Προστέθηκε στο καλάθι!</string>
    <string name="cart_removed_product">Αφαιρέθηκε από το καλάθι!</string>
    <string name="cart_is_empty">Το καλάδι είναι άδειο</string>
    <string name="category">Κατηγορία</string>
    <string name="checkoutDialog_title">Αγορά ως..</string>

    <!-- CHAT -->
    <string name="chat">Συνομιλία</string>
    <string name="message">Μήνυμα:</string>
    <string name="contact_us_success">Το μήνυμα στάλθηκε!</string>
    <string name="contact_us_error">Αποτυχία αποστολής! Προσπαθήστε ξανά</string>
    <string name="send_Email_button">Αποστολη</string>

    <!-- PRODUCTS -->
    <string-array name="product_filters_category">
        <item>Κατηγορία</item>
        <item>Γραφείο</item>
        <item>Καθιστικό</item>
        <item>Υπνοδωμάτιο</item>
    </string-array>

    <string-array name="product_filters_subCategory_desk">
        <item>Υποκατηγορία</item>
        <item>Αποθήκευση γραφείου</item>
        <item>Γραφεία</item>
        <item>Καρέκλες γραφείου</item>
    </string-array>

    <string-array name="product_filters_subCategory_livingRoom">
        <item>Υποκατηγορία</item>
        <item>Έπιπλα τηλεόρασης</item>
        <item>Καναπέδες</item>
        <item>Τραπέζια σαλονιού</item>
    </string-array>

    <string-array name="product_filters_subCategory_bedroom">
        <item>Υποκατηγορία</item>
        <item>Κρεβάτια</item>
        <item>Ντουλάπες</item>
        <item>Συρταριέρες αποθήκευσης</item>
    </string-array>


    <!-- CUSTOM PRODUCTS -->
    <string name="custom_product_overview"><u>Σύνοψη</u></string>
    <string name="custom_product_product">Προϊόν:</string>
    <string name="custom_product_color">- Χρώμα :</string>
    <string name="custom_product_body">- Σώμα :</string>
    <string name="custom_product_feet">- Πόδια :</string>
    <string name="default_product_name">Όνομα</string>
    <string name="default_product_price">Τιμή :</string>
    <string name="default_product_price_underlined"><u>Τιμή</u></string>
    <string name="bed">Κρεβάτι</string>
    <string name="sofa">Καναπές</string>
    <string name="desk">Γραφείο</string>

    <!-- ORDER -->
    <string name="button_next">Επομενο</string>
    <string name="button_make_order">Ολοκληρωση παραγγελιας</string>
    <string name="order_created">Η παραγγελία έγινε!</string>
    <string name="order_creation_failed">Η παραγγελία απέτυχε! Προσπαθήστε ξανά</string>
    <string name="order_header">Παραγγελία:</string>
    <string name="order_history">Παραγελλιες</string>
    <string name="order_cod">Η πληρωμή θα γίνει την ώρα της παράδοσης στον οδηγό της εταιρείας την
        ώρα της παραλαβής. <b>Χωρίς καμία δική σας επιβάρυνση!</b></string>
    <string name="order_bank_transfer_alphabank"><b>Alpha Bank</b> \nGR2901405080408002107094052</string>
    <string name="order_bank_transfer_ethniki"><b>Εθνική</b> \nGR4101103140010021494923721</string>
    <string name="order_bank_transfer_peiraios"><b>Πειραιώς</b> \nGR5501716810006583107131471</string>
    <string name="order_bank_transfer_receipt">Στείλτε μας την απόδειξη πληρωμής σε ηλεκτρονική μορφή
        στο <b>sales@homedecor.gr</b></string>
    <string name="order_pay_with_paypal_success">Εξοφλήθηκε! Ολοκληρώστε την παραγγελία!</string>

    <string-array name="order_shipping_method">
        <item>Μέθοδος αποστολής</item>
        <item>UPS</item>
        <item>UPS Express</item>
        <item>Παραλαβή από το κατάστημα</item>
    </string-array>

    <string-array name="order_payment_method">
        <item>Μέθοδος πληρωμής</item>
        <item>Πιστωτική/Χρεωστική</item>
        <item>Paypal</item>
        <item>Κατάθεση</item>
        <item>Αντικαταβολή</item>
    </string-array>

    <string-array name="credit_card_types">
        <item>Τύπος κάρτας</item>
        <item>VISA</item>
        <item>MASTERCARD</item>
    </string-array>

    <!-- CREDIT CARD STRINGS (LIBRARY)-->
    <string name="card_number_hint">ΠΡΟΣΘΗΚΗ ΝΟΥΜΕΡΟΥ</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="card_name_hint">ΠΡΟΣΘΗΚΗ ΟΝΟΜΑΤΟΣ</string>
    <string name="valid_till">ΛΗΓΕΙ</string>

</resources>
