<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_cart"
        android:onClick="deleteCart"
        android:orderInCategory="1"
        android:title="@string/delete_cart"
        android:icon="@drawable/ic_action_delete_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:onClick="showLogin"
        android:orderInCategory="2"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:onClick="showAboutUs"
        android:orderInCategory="3"
        android:title="@string/about_us"
        app:showAsAction="never" />

</menu>