<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etOrderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:backgroundTint="@color/transparent_full"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="textPersonName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/etOrderEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="@color/transparent_full"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="textEmailAddress" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/etOrderPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:backgroundTint="@color/transparent_full"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="phone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/etOrderMobilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobilePhone"
        android:backgroundTint="@color/transparent_full"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="phone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray" />

    <Button
        android:id="@+id/btnGoToOrderShipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:padding="15dp"
        android:text="@string/button_next"
        android:textColor="@color/white" />

</LinearLayout>
