<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:backgroundTint="@color/transparent_full"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="textPersonName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/etContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="@color/transparent_full"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="textEmailAddress" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/etContactMessage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="top"
        android:backgroundTint="@color/white"
        android:hint="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:fitsSystemWindows="true"
        android:breakStrategy="simple"
        android:inputType="textMultiLine"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:padding="15dp"
        android:text="@string/send_Email_button"
        android:textColor="@color/white"
        android:onClick="sendEmail"/>

</LinearLayout>
